samples/_failures_safe/1761086768_bc6082_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_279d45d3.c: In function ‘main’:
./samples/SAFE/__tmp_279d45d3.c:150:24: error: missing terminating " character
  150 |                 printf("\n
      |                        ^~~
./samples/SAFE/__tmp_279d45d3.c:150:17: error: expected expression at end of input
  150 |                 printf("\n
      |                 ^~~~~~
./samples/SAFE/__tmp_279d45d3.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_279d45d3.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_279d45d3.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_279d45d3.c:150:17: error: expected declaration or statement at end of input
